// Copyright 2021 Cisco Systems, Inc. and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "gogoproto/gogo.proto";
import "google/api/field_behavior.proto";
import "k8s.io/api/core/v1/generated.proto";

package istio_operator.v2.api.v1alpha1;

option go_package = "github.com/banzaicloud/istio-operator/v2/api/v1alpha1";

message NamespacedName {
    // Name of the referenced Kubernetes resource
    string name = 1 [(gogoproto.jsontag) = "name,omitempty"];
    // Namespace of the referenced Kubernetes resource
    string namespace = 2  [(gogoproto.jsontag) = "namespace,omitempty"];
}

message BaseK8sResourceConfigurationWithHPAWithoutImage {
    // Standard Kubernetes replica count configuration
    // +kubebuilder:validation:Minimum=0
    google.protobuf.Int32Value replicaCount = 1 [(gogoproto.wktpointer) = true];
    // Standard Kubernetes minimum replicas configuration
    // +kubebuilder:validation:Minimum=0
    google.protobuf.Int32Value minReplicas = 2 [(gogoproto.wktpointer) = true];
    // Standard Kubernetes maximum replicas configuration
    // +kubebuilder:validation:Minimum=0
    google.protobuf.Int32Value maxReplicas = 3 [(gogoproto.wktpointer) = true];
    // Standard Kubernetes resource configuration
    BaseK8sResourceConfiguration BaseK8sResourceConfig = 4 [(gogoproto.nullable) = false, (gogoproto.embed) = true, (gogoproto.jsontag) = ",inline"];
}

message BaseK8sResourceConfiguration {
    // Standard Kubernetes memory and CPU resource requirements
    k8s.io.api.core.v1.ResourceRequirements resources = 1;
    // Standard Kubernetes node selector configuration
    map<string,string> nodeSelector = 2;
    // Standard Kubernetes affinity configuration
    k8s.io.api.core.v1.Affinity affinity = 3;
    // Standard Kubernetes toleration configuration
    repeated k8s.io.api.core.v1.Toleration tolerations = 4 [(gogoproto.nullable) = false];
    // Standard Kubernetes pod annotation configuration
    map<string,string> podAnnotations = 5;
    // Standard Kubernetes security context configuration
    k8s.io.api.core.v1.SecurityContext securityContext = 6;
}


